quayacm-review/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app
  labels:
    app: budget-app
    name: budget-app
  namespace: budget-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget-app
      name: budget-app
  template:
    metadata:
      labels:
        app: budget-app
        name: budget-app
    spec:
      containers:
      - image: central-quay-registry.apps.ocp4.example.com/finance/budget-app-dev:1.0n
        name: budget-app
        ports:
        - containerPort: 8080
          name: budget-app
      imagePullSecrets:
        - finance-prod-deployer-pull-secret
---
